Improving preview mode. Align decisions (emotions) correctly. Play emotions while mouse over

--- a/src/ui/index.css
+++ b/src/ui/index.css
@@ -181,8 +181,34 @@ h4.ui.header {
     font-size: .78571429em;
 }
 
-.decision-item {
-    position: static;
-    bottom: 20px;
+.screen-video {
+    width: 100%;
+    height: 98%;
+}
 
+.decision-container {
+    position: relative;
+    bottom: 6.5em;
+    height: auto !important;
+}
+
+.decision-video {
+    width: auto;
+    height: auto;
+}
+
+.decision-item-container {
+    padding: 1em 0 1em 0 !important;
+    cursor: pointer;
+};
+
+#decision-container .decision-item {
+    visibility:hidden;
+    text-align: center;
+    width: 100%;
+}
+
+#decision-container:hover .decision-item {
+    visibility: visible;
+    color: rgb(176, 185, 190);
 }
